--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+ "test": "echo \"No tests yet\" && exit 0",
+  "dev": "next dev",
+  "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "prepare": "husky"
